--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tanstack/react-table": "^8.17.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.378.0",
     "mongodb": "^6.6.1",
     "mongoose": "^8.3.4",
