Docs: Update README.md with new AI model lonk and add new variables to .env.example

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ GITHUB_SECRET=
 
 NEXTAUTH_URL=
 NEXTAUTH_URL_INTERNAL=
-NEXTAUTH_SECRET=
+NEXTAUTH_SECRET=cRKmfvlslAVyJfdJYYVSBYoWRdtjR6Yegw93iIgTazE=
 
 MONGODB_URI=
 
@@ -16,5 +16,4 @@ STRIPE_WEBHOOK_SECRET=
 
 NEXT_PUBLIC_BASE_URL=
 
-OPENAI_API_KEY=
-OPENAI_API_URL=
+OPEN_ROUTER_API_KEY=
