--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,9 @@
   "functions": {
     "src/app/api/**/*": {
       "maxDuration": 60
+    },
+    "src/app/actions/*": {
+      "maxDuration": 60
     }
   }
 }
